--- a/promotions/templates/index.html
+++ b/promotions/templates/index.html
@@ -35,9 +35,9 @@
     // setup chat scoket
     
     const notifyScoket = new WebSocket(
-        'ws://'
+        'wss://'
         + window.location.host
-        + '/ws/notify/'
+        + '/wss/notify/'
     );
 
     // on socket open
